--- a/our-team.html
+++ b/our-team.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Our Team - Khair Publications</title>
+  <title>Our Team</title>
 
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -66,6 +66,8 @@
 <!-- Section Heading -->
 <section class="container my-5 text-center">
   <h1 class="section-title mb-2">Khair Publications</h1>
+  <!-- Divider -->
+<hr class="border-warning border-2 opacity-100 mx-5 mb-5" />
   <h3 class="text-light-custom mb-5">Our Team</h3>
 </section>
 
@@ -79,13 +81,11 @@
              alt="Sahibzada Khair Muhammad Bhorvi"
              style="object-fit: contain; width: 100%; height: auto; max-height: 450px;" />
         <div class="card-body">
-          <h4 class="card-title fw-bold text-yellow">Mufti Khair Muhammad Bhorvi</h4>
+          <h4 class="card-title fw-bold text-yellow">Pir Mufti Khair Muhammad Bhorvi</h4>
           <p class="card-text">Patron-in-Chief</p>
           <p>
-            Mufti Khair Muhammad Bhorvi, a descendant of the renowned spiritual figure Pir Fatih Muhammad Bhorvi, serves as the spiritual and intellectual guide for Khair Publications. His guidance anchors the organization in traditional Sufi values while supporting contemporary intellectual pursuits in Islamic thought and education.
           </p>
-          
-        </div>
+Pir Mufti Khair Muhammad Bhorvi is the Patron-in-Chief of Darbar-e-Aalia Naqshbandia Mujaddadia Bhor Sharif (Mianwali) and a distinguished author of numerous scholarly works. His guidance anchors the organization in traditional Sufi values while actively supporting contemporary intellectual pursuits in Islamic thought, interfaith dialogue, and the promotion of peace and harmony. Under his spiritual leadership, Khair Publications continues to bridge classical spirituality with modern scholarship, fostering an inclusive and enlightened approach to religious understanding.        </div>
       </div>
     </div>
   </div>
