--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
   <div class="container">
     <div class="row g-lg-5">
       <div class="banner-image col-md-6" data-aos="clip-bottom" data-aos-duration="1000">
-        <img src="images/logo1.png" class="img-fluid"  />
+        <img src="images/logo1.pnj.png" class="img-fluid"  />
       </div>
 
       <!-- ✅ Set text color to white here -->
