--- a/our-team.html
+++ b/our-team.html
@@ -162,6 +162,9 @@ Pir Mufti Khair Muhammad Bhorvi is the Patron-in-Chief of Darbar-e-Aalia Naqshba
           <a href="https://www.facebook.com/profile.php?id=61574118698840" target="_blank" class="text-light-custom text-decoration-none">
             <i class="fab fa-facebook-f social-icon"></i>
           </a>
+          <a href="https://www.linkedin.com/company/khair-publications/posts/?feedView=all" target="_blank">
+  <i class="fab fa-linkedin-in social-icon text-light-custom"></i>
+</a>
           <a href="https://wa.me/923336095804" target="_blank">
     <i class="fab fa-whatsapp fs-5 text-success"></i>
   </a>
