--- a/index.html
+++ b/index.html
@@ -504,6 +504,9 @@
           <a href="https://www.facebook.com/profile.php?id=61574118698840" target="_blank">
             <i class="fab fa-facebook-f social-icon text-light-custom"></i>
           </a>
+          <a href="https://www.linkedin.com/company/khair-publications/posts/?feedView=all" target="_blank">
+  <i class="fab fa-linkedin-in social-icon text-light-custom"></i>
+</a>
         <a href="https://wa.me/923336095804" target="_blank">
   <i class="fab fa-whatsapp fs-5" style="color: #25D366;"></i>
 </a>
