--- a/index.html
+++ b/index.html
@@ -255,11 +255,11 @@
           "Every idea holds wisdom, and every voice deserves to be heard with clarity and grace."
         </blockquote>
 
-        <ul>
+      <ul>
           <li><strong>We are a creative publishing house dedicated to publishing quality literature, research, and contemporary writing.</strong></li>
-          <li><strong>Continuing credible work in Sufism, Islamic education, and history.</strong></li>
+          <li><strong>Continuing a legacy of contributions to the study of Sufism.</strong></li>
           <li><strong>Spreading authentic Islamic knowledge to global readers.</strong></li>
-          <li><strong>Promoting inter-faith dialogue, spiritual growth, and global peace.</strong></li>
+          <li><strong>Encouraging inter-faith understanding, deepening spiritual growth, and working towards global peace.</strong></li>
         </ul>
 
       </div>
