--- a/our-team.html
+++ b/our-team.html
@@ -68,9 +68,8 @@
   <h1 class="section-title mb-2">Khair Publications</h1>
   <!-- Divider -->
 <hr class="border-warning border-2 opacity-100 mx-5 mb-5" />
-  <h3 class="text-light-custom mb-5">Our Team</h3>
+  <h3 class="text-light-custom mb-5">Patron-in-Chief</h3>
 </section>
-
 <!-- Patron-in-Chief -->
 <section class="container mb-5">
   <div class="row justify-content-center mb-5">
@@ -82,15 +81,19 @@
              style="object-fit: contain; width: 100%; height: auto; max-height: 450px;" />
         <div class="card-body">
           <h4 class="card-title fw-bold text-yellow">Pir Mufti Khair Muhammad Bhorvi</h4>
-          <p class="card-text">Patron-in-Chief</p>
+       
           <p>
           </p>
 Pir Mufti Khair Muhammad Bhorvi is the Patron-in-Chief of Darbar-e-Aalia Naqshbandia Mujaddadia Bhor Sharif (Mianwali) and a distinguished author of numerous scholarly works. His guidance anchors the organization in traditional Sufi values while actively supporting contemporary intellectual pursuits in Islamic thought, interfaith dialogue, and the promotion of peace and harmony. Under his spiritual leadership, Khair Publications continues to bridge classical spirituality with modern scholarship, fostering an inclusive and enlightened approach to religious understanding.        </div>
       </div>
     </div>
   </div>
+<hr class="border-warning border-2 opacity-100 mx-5 mb-5" />
 
   <!-- Founder -->
+   <h2 class="mb-5 text-center" style="color: #FFD700; font-weight: 700; letter-spacing: 1px; font-size: 2rem;"> Our Team </h2>
+
+
   <div class="row justify-content-center mb-5">
     <div class="col-md-8" data-aos="zoom-in">
       <div class="card card-custom text-center p-4">
@@ -112,7 +115,7 @@ Pir Mufti Khair Muhammad Bhorvi is the Patron-in-Chief of Darbar-e-Aalia Naqshba
 </section>
 
 <!-- Divider -->
-<hr class="border-warning border-2 opacity-100 mx-5 mb-5" />
+<!-- <hr class="border-warning border-2 opacity-100 mx-5 mb-5" /> -->
 
 <!-- Other Team Members -->
 <section class="container mb-5">
