--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Khair Publications</title>
-  <!-- Favicon -->
-<link rel="icon" type="images/logo1.png" href="favicon.ico" />
-<link rel="icon" type="images/logo1.png" href="favicon.png" />
+
 
 
   <!-- Bootstrap CSS -->
@@ -39,6 +37,46 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <!-- Custom CSS -->
   <link rel="stylesheet" href="style.css">
+
+
+<style>
+  body {
+    margin: 0;
+    padding: 0;
+    background-image: url('images/bhor2.jpg'); /* ✅ Local image */
+    background-size: 160%;                     /* 🔍 Zoomed-out slightly */
+    background-position: center center;        /* Perfectly centered */
+    background-repeat: no-repeat;              /* No tiling */
+    background-attachment: fixed;              /* Fixed on desktop */
+    min-height: 100vh;
+    font-family: 'Poppins', sans-serif;
+    position: relative;
+    z-index: 0;
+  }
+
+  /* ✅ Green overlay for contrast */
+  body::before {
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(23, 109, 27, 0.88);
+    z-index: -1;
+    pointer-events: none;
+  }
+
+  @media (max-width: 768px) {
+    body {
+      background-attachment: scroll;
+      background-size: 100%; /* Adjust size on mobile */
+    }
+  }
+</style>
+
+
+
 </head>
 
 
@@ -242,7 +280,7 @@
   <div class="container">
     <div class="row g-lg-5">
       <div class="banner-image col-md-6" data-aos="clip-bottom" data-aos-duration="1000">
-        <img src="images/logo1.pnj.png" class="img-fluid"  />
+        <img src="images/logo1.png" class="img-fluid" alt="David Paciolla" />
       </div>
 
       <!-- ✅ Set text color to white here -->
@@ -255,7 +293,7 @@
           "Every idea holds wisdom, and every voice deserves to be heard with clarity and grace."
         </blockquote>
 
-      <ul>
+        <ul>
           <li><strong>We are a creative publishing house dedicated to publishing quality literature, research, and contemporary writing.</strong></li>
           <li><strong>Continuing a legacy of contributions to the study of Sufism.</strong></li>
           <li><strong>Spreading authentic Islamic knowledge to global readers.</strong></li>
