--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
   body {
     margin: 0;
     padding: 0;
-    background-image: url('images/bhor2.jpg'); /* ✅ Local image */
-    background-size: 160%;                     /* 🔍 Zoomed-out look */
+    background-image: url('images/bhorvi.JPG'); /* ✅ Local image */
+    background-size: 100%;                     /* 🔍 Zoomed-out look */
     background-position: center center;        /* Centered */
     background-repeat: no-repeat;              /* No tiling */
     background-attachment: fixed;              /* Desktop fixed effect */
