--- a/our-team.html
+++ b/our-team.html
@@ -97,7 +97,7 @@ Pir Mufti Khair Muhammad Bhorvi is the Patron-in-Chief of Darbar-e-Aalia Naqshba
   <div class="row justify-content-center mb-5">
     <div class="col-md-8" data-aos="zoom-in">
       <div class="card card-custom text-center p-4">
-        <img src="images/saeedsb1.jpeg"
+        <img src="images/SaeedSaab.jpeg"
              class="card-img-top rounded bg-white p-1 mb-3"
              alt="Sahibzada Muhammad Saeed"
              style="object-fit: contain; width: 100%; height: auto; max-height: 450px;" />
@@ -204,3 +204,4 @@ Pir Mufti Khair Muhammad Bhorvi is the Patron-in-Chief of Darbar-e-Aalia Naqshba
 
 </body>
 </html>
+
