--- a/contact.html
+++ b/contact.html
@@ -98,30 +98,27 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-custom sticky-top shadow">
   <div class="container">
-    <a class="navbar-brand" href="index.html">Khair Publications</a>
-    <button class="navbar-toggler text-yellow" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-      <span class="navbar-toggler-icon">
-        <i class="fas fa-bars text-yellow"></i>
-      </span>
+    <a class="navbar-brand" href="#">Khair Publications</a>
+
+    <!-- Toggler -->
+    <button class="navbar-toggler text-yellow" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <!-- Default (closed state) -->
+      <i class="fas fa-ellipsis-v text-yellow" id="menu-icon"></i>
     </button>
+
+    <!-- Menu -->
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="index.html"><i class="fas fa-home me-1"></i> Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="our-team.html"><i class="fas fa-users me-1"></i> Our Team</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="manuscript.html"><i class="fas fa-book me-1"></i> Documents</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" href="contact.html"><i class="fas fa-envelope me-1"></i> Contact Us</a>
-        </li>
+        <li class="nav-item"><a class="nav-link" href="index.html"><i class="fas fa-home me-1"></i> Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="our-team.html"><i class="fas fa-users me-1"></i> Our Team</a></li>
+        <li class="nav-item"><a class="nav-link active" href="Board.html"><i class="fas fa-chalkboard-teacher me-1"></i> Editorial Board</a></li>
+        <li class="nav-item"><a class="nav-link" href="manuscript.html"><i class="fas fa-book me-1"></i> Manuscripts</a></li>
+        <li class="nav-item"><a class="nav-link" href="contact.html"><i class="fas fa-envelope me-1"></i> Contact Us</a></li>
       </ul>
     </div>
   </div>
 </nav>
+
 
 <!-- Page Heading -->
 <section class="container my-5 text-center">
