--- a/manuscript.html
+++ b/manuscript.html
@@ -145,45 +145,40 @@
   </style>
 </head>
 <body>
-
- <!-- Navbar -->
+<!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-custom sticky-top shadow">
   <div class="container">
     <a class="navbar-brand" href="#">Khair Publications</a>
-    <button class="navbar-toggler text-yellow" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-      <span class="navbar-toggler-icon">
-        <i class="fas fa-bars text-yellow"></i>
-      </span>
+
+    <!-- Toggler -->
+    <button class="navbar-toggler text-yellow" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <!-- Default (closed state) -->
+      <i class="fas fa-ellipsis-v text-yellow" id="menu-icon"></i>
     </button>
+
+    <!-- Menu -->
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="index.html"><i class="fas fa-home me-1"></i> Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="our-team.html"><i class="fas fa-users me-1"></i> Our Team</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="manuscript.html"><i class="fas fa-book me-1"></i> Documents</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="contact.html"><i class="fas fa-envelope me-1"></i> Contact Us</a>
-        </li>
+        <li class="nav-item"><a class="nav-link" href="index.html"><i class="fas fa-home me-1"></i> Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="our-team.html"><i class="fas fa-users me-1"></i> Our Team</a></li>
+        <li class="nav-item"><a class="nav-link active" href="Board.html"><i class="fas fa-chalkboard-teacher me-1"></i> Editorial Board</a></li>
+        <li class="nav-item"><a class="nav-link" href="manuscript.html"><i class="fas fa-book me-1"></i> Manuscripts</a></li>
+        <li class="nav-item"><a class="nav-link" href="contact.html"><i class="fas fa-envelope me-1"></i> Contact Us</a></li>
       </ul>
     </div>
   </div>
 </nav>
 
+
 <!-- Section Heading -->
 <section class="container my-5 text-center">
   <h1 class="section-title mb-2">Khair Publications</h1>
   <hr class="border-warning border-2 opacity-100 mx-5 mb-5" />
-  <h1 class="section-title">Manuscripts & Documents</h1>
+  <h1 class="section-title">Manuscripts</h1>
 </section>
 
 <!-- Section Subheading -->
 <section class="container my-5 text-center">
-  <h3 class="text-light-custom mb-3">Explore our scholarly works</h3>
   <p class="subtitle">Read online manuscripts directly from our library.</p>
 </section>
 
@@ -195,14 +190,13 @@
       <div class="card card-custom p-4 text-center">
         <h4 class="text-yellow mb-3">Old Handwritten Holy Quran Manuscript in Pakistan</h4>
         <p class="text-light-custom">
-          An insightful manuscript exploring the foundations of Sufi spirituality, interfaith harmony, and ethical teachings.
+          An exceptionally preserved handwritten manuscript of the Holy Quran, dating back approximately 150 years.  
+This rare artifact exemplifies the enduring tradition of sacred calligraphy and Islamic heritage.
         </p>
         
-        <!-- PDF Preview (Responsive) -->
-        <div class="pdf-container mb-3">
-          <iframe id="pdfFrame" 
-                  src="Manuscript.pdf#toolbar=0&navpanes=0&scrollbar=0" 
-                  class="pdf-preview"></iframe>
+        <!-- PDF Preview -->
+        <div class="ratio ratio-16x9 mb-3">
+          <iframe id="pdfFrame" src="Manuscript.pdf#toolbar=0&navpanes=0&scrollbar=0" class="pdf-preview"></iframe>
         </div>
 
         <!-- Fullscreen Button -->
@@ -214,47 +208,21 @@
   </div>
 </section>
 
-<!-- Custom CSS -->
-<style>
-  .pdf-container {
-    width: 100%;
-    height: 500px; /* default for desktop */
-  }
-  .pdf-preview {
-    width: 100%;
-    height: 100%;
-    border: 2px solid #ffc107;
-    border-radius: 10px;
-  }
-  /* Mobile adjustments */
-  @media (max-width: 768px) {
-    .pdf-container {
-      height: 350px; /* shorter but still readable */
-    }
-  }
-  @media (max-width: 480px) {
-    .pdf-container {
-      height: 280px; /* fits small phones */
-    }
-  }
-</style>
-
 <!-- Fullscreen Script -->
 <script>
   function openFullscreen() {
     var elem = document.getElementById("pdfFrame");
     if (elem.requestFullscreen) {
       elem.requestFullscreen();
-    } else if (elem.mozRequestFullScreen) {
+    } else if (elem.mozRequestFullScreen) { 
       elem.mozRequestFullScreen();
-    } else if (elem.webkitRequestFullscreen) {
+    } else if (elem.webkitRequestFullscreen) { 
       elem.webkitRequestFullscreen();
-    } else if (elem.msRequestFullscreen) {
+    } else if (elem.msRequestFullscreen) { 
       elem.msRequestFullscreen();
     }
   }
 </script>
-
 
 <!-- Footer -->
 <footer class="py-5 bg-dark-custom rounded-4 m-3 m-lg-4" data-aos="fade-up">
@@ -310,4 +278,3 @@
 
 </body>
 </html>
-
