--- a/our-team.html
+++ b/our-team.html
@@ -86,29 +86,26 @@
 <nav class="navbar navbar-expand-lg navbar-custom sticky-top shadow">
   <div class="container">
     <a class="navbar-brand" href="#">Khair Publications</a>
-    <button class="navbar-toggler text-yellow" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-      <span class="navbar-toggler-icon">
-        <i class="fas fa-bars text-yellow"></i>
-      </span>
+
+    <!-- Toggler -->
+    <button class="navbar-toggler text-yellow" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <!-- Default (closed state) -->
+      <i class="fas fa-ellipsis-v text-yellow" id="menu-icon"></i>
     </button>
+
+    <!-- Menu -->
     <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="index.html"><i class="fas fa-home me-1"></i> Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="our-team.html"><i class="fas fa-users me-1"></i> Our Team</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="manuscript.html"><i class="fas fa-book me-1"></i> Documents</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="contact.html"><i class="fas fa-envelope me-1"></i> Contact Us</a>
-        </li>
+        <li class="nav-item"><a class="nav-link" href="index.html"><i class="fas fa-home me-1"></i> Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="our-team.html"><i class="fas fa-users me-1"></i> Our Team</a></li>
+        <li class="nav-item"><a class="nav-link active" href="Board.html"><i class="fas fa-chalkboard-teacher me-1"></i> Editorial Board</a></li>
+        <li class="nav-item"><a class="nav-link" href="manuscript.html"><i class="fas fa-book me-1"></i> Manuscripts</a></li>
+        <li class="nav-item"><a class="nav-link" href="contact.html"><i class="fas fa-envelope me-1"></i> Contact Us</a></li>
       </ul>
     </div>
   </div>
 </nav>
+
 
 
 
@@ -166,7 +163,7 @@ Pir Mufti Khair Muhammad Bhorvi is the Patron-in-Chief of Darbar-e-Aalia Naqshba
 
 <!-- Divider -->
 <!-- <hr class="border-warning border-2 opacity-100 mx-5 mb-5" /> -->
-
+<hr class="border-warning border-2 opacity-100 mx-5 mb-5" />
 <!-- Team Members -->
 <section class="container mb-5">
   <div class="row g-4 justify-content-center">
@@ -179,7 +176,7 @@ Pir Mufti Khair Muhammad Bhorvi is the Patron-in-Chief of Darbar-e-Aalia Naqshba
              style="object-fit: cover; height: 160px; width: 160px;" />
         <div class="card-body">
           <h4 class="card-title text-yellow">Muhammad Haris Saleem</h4>
-          <p class="card-text">Director of Publishing & Strategic Operations</p>
+          <p class="card-text">Deputy Director of Publishing & Strategic Operations</p>
         </div>
       </div>
     </div>
@@ -192,7 +189,7 @@ Pir Mufti Khair Muhammad Bhorvi is the Patron-in-Chief of Darbar-e-Aalia Naqshba
              style="object-fit: cover; height: 160px; width: 160px;" />
         <div class="card-body">
           <h4 class="card-title text-yellow">Muhammad Hamza</h4>
-          <p class="card-text">Director of Content & Research</p>
+          <p class="card-text">Deputy Director of Content & Research</p>
         </div>
       </div>
     </div>
