--- a/manuscript.html
+++ b/manuscript.html
@@ -196,7 +196,7 @@ This rare artifact exemplifies the enduring tradition of sacred calligraphy and 
         
         <!-- PDF Preview -->
         <div class="ratio ratio-16x9 mb-3">
-          <iframe id="pdfFrame" src="Manuscript.pdf#toolbar=0&navpanes=0&scrollbar=0" class="pdf-preview"></iframe>
+          <iframe id="pdfFrame" src="Manuscript1.pdf#toolbar=0&navpanes=0&scrollbar=0" class="pdf-preview"></iframe>
         </div>
 
         <!-- Fullscreen Button -->
@@ -278,3 +278,4 @@ This rare artifact exemplifies the enduring tradition of sacred calligraphy and 
 
 </body>
 </html>
+
