--- a/Board.html
+++ b/Board.html
@@ -128,7 +128,7 @@
          style="object-fit: cover; height: 160px; width: 160px;" />
     <h4 class="card-title text-yellow">Dr. Waleed Ziad</h4>
     <p class="card-text"><strong>Associate Professor, Religious Studies</strong><br>
-    University of North Carolina at Chapel Hill, USA</p>
+    Georgetown University, Qatar</p>
     <p class="card-text">Renowned historian of Afghanistan, Central & South Asia, and the Persianate world. 
     Though unable to actively participate due to his busy academic schedule, he graciously serves on our Editorial Board with a special focus on manuscript preservation and archival research.</p>
   </div>
@@ -232,3 +232,4 @@
 
 </body>
 </html>
+
