--- a/our-team.html
+++ b/our-team.html
@@ -194,6 +194,21 @@ Pir Mufti Khair Muhammad Bhorvi is the Patron-in-Chief of Darbar-e-Aalia Naqshba
       </div>
     </div>
 
+ <!-- Jawad -->
+    <div class="col-md-5" data-aos="fade-left">
+      <div class="card card-custom p-4 text-center">
+        <img src="images/Jawad.png" class="rounded-circle mx-auto bg-white p-1 mb-3"
+             alt="Muhammad Hamza"
+             style="object-fit: cover; height: 160px; width: 160px;" />
+        <div class="card-body">
+          <h4 class="card-title text-yellow">Muhammad Jawad</h4>
+          <p class="card-text">Deputy Director Marketing & Communications</p>
+        </div>
+      </div>
+    </div>
+
+
+    
     <!-- Bilal -->
     <div class="col-md-5" data-aos="fade-up">
       <div class="card card-custom p-4 text-center">
@@ -268,3 +283,4 @@ Pir Mufti Khair Muhammad Bhorvi is the Patron-in-Chief of Darbar-e-Aalia Naqshba
 
 </body>
 </html>
+
