--- a/our-team.html
+++ b/our-team.html
@@ -202,7 +202,7 @@ Pir Mufti Khair Muhammad Bhorvi is the Patron-in-Chief of Darbar-e-Aalia Naqshba
              style="object-fit: cover; height: 160px; width: 160px;" />
         <div class="card-body">
           <h4 class="card-title text-yellow">Muhammad Jawad</h4>
-          <p class="card-text">Deputy Director Marketing & Communications</p>
+          <p class="card-text">Deputy Director of Marketing & Communications</p>
         </div>
       </div>
     </div>
@@ -283,4 +283,5 @@ Pir Mufti Khair Muhammad Bhorvi is the Patron-in-Chief of Darbar-e-Aalia Naqshba
 
 </body>
 </html>
+
 
