--- a/Board.html
+++ b/Board.html
@@ -86,6 +86,7 @@
         <li class="nav-item"><a class="nav-link" href="our-team.html"><i class="fas fa-users me-1"></i> Our Team</a></li>
         <li class="nav-item"><a class="nav-link active" href="Board.html"><i class="fas fa-chalkboard-teacher me-1"></i> Editorial Board</a></li>
         <li class="nav-item"><a class="nav-link" href="manuscript.html"><i class="fas fa-book me-1"></i> Manuscripts</a></li>
+        <li class="nav-item"><a class="nav-link active" href="store.html"><i class="fas fa-store me-1"></i> Store</a></li>
         <li class="nav-item"><a class="nav-link" href="contact.html"><i class="fas fa-envelope me-1"></i> Contact Us</a></li>
       </ul>
     </div>
@@ -232,4 +233,5 @@
 
 </body>
 </html>
+
 
